alignment issue

--- a/css/tony.css
+++ b/css/tony.css
@@ -6,7 +6,6 @@
 	height: inherit;
 	width: inherit;
 	background: black;
-	margin-top: 0px;
   text-align: center;
 }
 
